# multi-turn-evals

./: .coverage  .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
configs/: full-suite-job.yaml  step-eval-job.yaml  trajectory-eval-job.yaml
src/: hello.py
src/agent/: graph.py  nodes.py  state.py  tools.py
src/grading/: step_grader.py  trajectory_grader.py
src/harbor_agent/: onboarding_agent.py
src/scripts/: generate_scenarios.py
tasks/step-level/confirm-change-request/: expected.json  instruction.md
tasks/step-level/confirm-clean/: expected.json  instruction.md  task.toml
tasks/step-level/email-second-attempt/: expected.json  instruction.md
tasks/step-level/email-typo/: expected.json  instruction.md
tasks/step-level/email-valid/: expected.json  instruction.md  task.toml
tasks/step-level/name-extraction-noise/: expected.json  instruction.md
tasks/step-level/name-extraction-simple/: expected.json  instruction.md  task.toml
tasks/step-level/plan-comparison-question/: expected.json  instruction.md
tasks/step-level/plan-direct-selection/: expected.json  instruction.md  task.toml
tasks/step-level/plan-upsell-resistance/: expected.json  instruction.md
tasks/trajectory/happy-path-enterprise/: expected.json  instruction.md
tests/: conftest.py
tests/integration/: conftest.py  test_graph.py
tests/unit/: conftest.py  test_generate_scenarios.py  test_harbor_agent.py  test_hello.py  test_nodes.py  test_state.py  test_step_grader.py  test_tools.py  test_trajectory_grader.py
(+5 files in other folders)
